# xsnano

./: .gitignore  CMakeLists.txt  COPYING  HACKING.rst  Makefile.am  README  configure.ac
include/: xs.h
perf/: CMakeLists.txt  inproc_latency.c  inproc_throughput.c
src/: CMakeLists.txt  Makefile.am  atomic.h  commands.h  ctx.c  ctx.h  err.c  err.h  inproc_stream.c  inproc_stream.h  inproc_transport.c  inproc_transport.h  instream.c  instream.h  likely.h  msg.c  msg.h  mutex.c  mutex.h  outstream.c  outstream.h  pair_pattern.c  pair_pattern.h  pattern_func.h  pattern_plugin.c  pattern_plugin.h  pipe.h  pipe_template.h  plugin.c  plugin.h  pub.c  pub.h  signal.c  signal.h  sock.c  sock.h  sock_api.h  stdplugins.c  stdplugins.h  stream.c  (+21 more)
tests/: CMakeLists.txt  Makefile.am  basic.c  pair_inproc.c  pair_inproc_latency.c  pipe.c
